--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@7.0.0"></script>
     <script
       src="https://kit.fontawesome.com/26504e4a1f.js"
       crossorigin="anonymous"
