Appwrite endpoints deleted and bugs fixed

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arora</title>
+    <title>Aurora</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
       <ul>
-        <li class="brand"><img src="icon.jpg" alt="Arora" /> Arora </li>
+        <li class="brand"><img src="icon.jpg" alt="Aurora" /> Aurora </li>
         <li>Home</li>
         <li>About</li>
       </ul>
@@ -132,7 +132,7 @@
       </div>
       <div class="songInfo">
         <img src="playing.gif" width="42px" alt="" id="gif" />
-        <span id="masterSongName">Arora</span>
+        <span id="masterSongName">Aurora</span>
       </div>
     </div>
     <script src="script.js"></script>
